# sparkypandy

./: .bumpversion.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  mypy.ini  setup.cfg  tox.ini
.github/workflows/: ci.yaml  test.yaml
sparkypandy/: __init__.py  _column.py  _dataframe.py  testing.py
tests/: conftest.py  test_column.py  test_dataframe.py  test_sparkypandy.py  test_testing.py
