[metadata]
name = sparkypandy
version = 0.1.3
description = It's not spark, it's now pandas, it's just awkward...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/sparkypandy
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed
keywords = spark, pyspark, pandas, dataframe
project_urls =
    Documentation = https://packaging.python.org/tutorials/distributing-packages/
    Funding = https://donate.pypi.org
    Source = https://github.com/sparkypandyasconcelos/sparkypandy
    Tracker = https://github.com/sparkypandyasconcelos/sparkypandy/issues

[options]
packages = find:
install_requires =
    pandas>=1,<2
    pyspark>=3,<4
python_requires = >=3.7.1,<4.0
include_package_data = True

[options.extras_require]
dev =
    bumpversion==0.6.0
    ipykernel==5.5.5
    ipython==7.21.0
    jupyterlab==3.0.16
    sphinx==3.5.1
    twine==3.4.1
tests =
    pytest==6.2.2
    pytest-cov==2.11.1
    tox==3.22.0

[bdist_wheel]
universal = True

[flake8]
exclude =
    docs
    .venv
    build
    *.pyi
    .git
    build
    .tox
max-line-length = 120
ignore =
    E722
    E203
    W503

[isort]
profile = black
src_paths = sparkypandy,tests
combine_as_imports = true
include_trailing_comma = true
known_first_party = sparkypandy
line_length = 100
